welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:9: error: not found: value nbPas2
	while (nbPas!=nbPas2) {
                      ^Methods:11: error: not found: value nbPas2
		nbPas2 = nbPas2 + 1
                ^